--- a/src/app/features/workers/days-of-sickness/days-of-sickness.component.html
+++ b/src/app/features/workers/days-of-sickness/days-of-sickness.component.html
@@ -14,6 +14,12 @@
               Do you know how many days sickness they've taken in the last <br />12 months?
             </h1>
           </legend>
+          <app-details [title]="'Why we ask for this information'">
+            <p>
+              This data is used to help highlight staff wellbeing issues. It is also used to build an understanding of
+              the financial cost to the sector due to days lost because of sickness or injury.
+            </p>
+          </app-details>
           <div class="govuk-radios govuk-radios--conditional">
             <div class="govuk-radios__item">
               <input
