--- a/src/app/features/workers/ethnicity/ethnicity.component.html
+++ b/src/app/features/workers/ethnicity/ethnicity.component.html
@@ -10,6 +10,13 @@
             What's their ethnicity?
           </h1>
         </legend>
+        <app-details [title]="'Why we ask for this information'">
+          <p>
+            To see how the ethnicity of the workforce compares to that of the local population and to that of your
+            service users. The data is also used to look at employment trends across different groups and to inform
+            recruitment plans.
+          </p>
+        </app-details>
         <div
           class="govuk-form-group govuk-!-margin-bottom-4"
           [class.govuk-form-group--error]="submitted && form.invalid"
