feat(revealsOnStaffRecords): Updated reveal text again

--- a/src/app/features/workers/ethnicity/ethnicity.component.html
+++ b/src/app/features/workers/ethnicity/ethnicity.component.html
@@ -12,9 +12,9 @@
         </legend>
         <app-details [title]="'Why we ask for this information'">
           <p>
-            To see how the ethnicity and ethnic backgrounds of the workforce compares to that of the local population
-            and to that of the people you support. The data is also used to look at employment trends across different
-            groups and to inform recruitment plans.
+            To see how the ethnicity of the workforce compares to that of the local population and to that of the people
+            you support. The data is also used to look at employment trends across different groups and to inform
+            recruitment plans.
           </p>
         </app-details>
         <div
