--- a/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
+++ b/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
@@ -16,8 +16,8 @@
         <app-details [title]="'Why we ask for this information'">
           <p>
             This National Insurance number will be mixed with their date of birth to create a unique reference number
-            for them in ASC-WDS. This reference number lets us distinguish between staff without identifying them, shows
-            us how many staff work for multiple workplaces and tracks their career progression within the sector.
+            for them in ASC-WDS. This reference number lets us distinguish between staff without identifying them. It
+            shows us how many staff work for multiple workplaces and tracks their career progression within the sector.
           </p>
         </app-details>
 
