feat(changesToBenefitsBundle): Update one of the free resource links and content to recommendations for CQC

--- a/src/app/features/benefits-bundle/benefits-bundle.component.html
+++ b/src/app/features/benefits-bundle/benefits-bundle.component.html
@@ -64,14 +64,13 @@
 
         <p>
           <a
-            href="https://www.skillsforcare.org.uk/Documents/Standards-legislation/CQC/Good-and-outstanding-care-guide.pdf"
+            href="https://www.skillsforcare.org.uk/resources/documents/Support-for-leaders-and-managers/good-and-outstanding-care/Recommendations-for-CQC-providers.pdf"
             target="_blank"
-            >Good and outstanding care guide</a
+            >Recommendations for CQC providers</a
           >
         </p>
         <p>
-          This guide shares best practice from over 350 'good' and 'outstanding' CQC inspection reports to help you
-          prepare for inspections.
+          Skills for Care's recommendations offer practical support to help you deliver 'good' and 'outstanding' care.
         </p>
 
         <p>
