--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -9,7 +9,7 @@
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-      <h1 class="govuk-fieldset__heading">Sign in</h1>
+      <h1 class="govuk-fieldset__heading" data-cy="signin-heading">Sign in</h1>
     </legend>
 
     <div
@@ -67,5 +67,5 @@
 
 <ul class="govuk-list">
   <li><a [routerLink]="['/forgot-your-password']">Forgot your password?</a></li>
-  <li><a [routerLink]="['/registration', 'create-account']">Create an account</a></li>
+  <li><a [routerLink]="['/registration', 'create-account']" data-cy="create-account">Create an account</a></li>
 </ul>
