--- a/src/app/features/workplace/staff-benefit-holiday-leave/staff-benefit-holiday-leave.component.html
+++ b/src/app/features/workplace/staff-benefit-holiday-leave/staff-benefit-holiday-leave.component.html
@@ -15,10 +15,18 @@
             How many days leave do your full-time care workers get each year?
           </h1>
         </legend>
+        <app-details [title]="'Why we ask for this information'">
+          <p>
+            This data is used to determine whether rewards and benefits act as incentives when it comes to staff
+            retention. It also reveals the type of incentives that are being offered in the sector and how common they
+            are.
+          </p>
+        </app-details>
         <div>
           <label class="govuk-label" for="holidayLeave">Number of days</label>
           <p class="govuk-hint">
-            Include bank holidays in the total. For example, 20 days annual leave plus 8 bank holidays would be 28 days in total.
+            Include bank holidays in the total. For example, 20 days annual leave plus 8 bank holidays would be 28 days
+            in total.
           </p>
         </div>
 
