--- a/src/app/features/new-dashboard/benchmarks-tab/comparison-group-header/comparison-group-header.component.html
+++ b/src/app/features/new-dashboard/benchmarks-tab/comparison-group-header/comparison-group-header.component.html
@@ -3,7 +3,8 @@
     <ng-container *ngIf="meta && meta.staff && meta.workplaces; else noCompGroup">
       <p data-testid="comparison-group-text">
         <b>Your comparison group</b> is {{ meta.staff | number }} staff from {{ meta.workplaces | number }}
-        {{ pluralizeWorkplaces(meta.workplaces) }} providing the same main service as you in your local authority.
+        {{ pluralizeWorkplaces(meta.workplaces) }} using ASC-WDS and providing
+        {{ canViewFullContent ? 'the same main service as you' : 'adult social care' }} in your local authority.
       </p>
     </ng-container>
     <ng-template #noCompGroup>
