correct spelling mistake on table heading

--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -16,7 +16,7 @@
             <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Training name</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Accredited</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 20%">Completion date</th>
-            <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Expriy date</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Expiry date</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 17%">Status</th>
           </tr>
         </thead>
