add tests for other links in the new home page tab

--- a/src/app/features/articles/new-article-list/new-article-list.component.html
+++ b/src/app/features/articles/new-article-list/new-article-list.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="articleList?.length > 0">
-  <h3 class="govuk-heading-s govuk-!-margin-top-1">ASC-WDS news</h3>
+<div *ngIf="articleList?.length > 0" class="govuk-!-margin-top-4">
+  <h3 class="govuk-heading-s">ASC-WDS news</h3>
   <ul class="govuk-list govuk-!-margin-bottom-6">
     <li
       class="govuk-!-margin-bottom-3 govuk__flex govuk__justify-content-space-between"
@@ -14,4 +14,4 @@
       </div>
     </li>
   </ul>
-</ng-container>
+</div>
