created card component for the home page, add images, add card component to home page tab

--- a/src/app/features/new-dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/new-dashboard/home-tab/home-tab.component.html
@@ -2,7 +2,11 @@
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1>First column</h1>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-one-half">
+          <app-card></app-card>
+        </div>
+      </div>
     </div>
     <div class="govuk-grid-column-one-third">
       <app-new-article-list data-testid="article-list"></app-new-article-list>
