move some of card content into home tab, add an initial test for card component

--- a/src/app/features/new-dashboard/home-tab/card/card.component.html
+++ b/src/app/features/new-dashboard/home-tab/card/card.component.html
@@ -1,11 +1,8 @@
 <div class="govuk-!-margin-top-4 asc-card">
   <div>
-    <img class="asc-card__image" src="/assets/images/benchmarks.svg" alt="" />
+    <img class="asc-card__image" src="{{ image }}" alt="" />
   </div>
   <div class="asc-card__container">
-    <a class="govuk-link--no-visited-state asc-card__link" href="#">See how you compare with other workplaces</a>
-    <p class="govuk-!-margin-top-5">
-      There are 9 workplaces providing the same main service as you in your local authority area.
-    </p>
+    <ng-content></ng-content>
   </div>
 </div>
