--- a/src/app/features/new-dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/new-dashboard/home-tab/home-tab.component.html
@@ -12,7 +12,8 @@
               >See how you compare with other workplaces</a
             >
             <p class="govuk-!-margin-top-5">
-              There are 9 workplaces providing the same main service as you in your local authority area.
+              There are {{ meta?.workplaces | number }} workplaces providing the same main service as you in your local
+              authority area.
             </p></app-card
           >
         </div>
