--- a/src/app/features/new-dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/new-dashboard/home-tab/home-tab.component.html
@@ -1,4 +1,24 @@
 <app-new-dashboard-header tab="home"></app-new-dashboard-header>
+<div class="govuk-width-container govuk-!-margin-top-6 govuk-!-margin-bottom-2 summary-box" data-testid="summaryBox">
+  <app-summary-link>
+    <a (click)="navigateToTab($event, 'workplace')" class="govuk-link--no-visited-state" href="#"> Workplace </a>
+  </app-summary-link>
+
+  <hr class="govuk-section-break--visible summary-section-break" />
+  <app-summary-link>
+    <a (click)="navigateToTab($event, 'staff-records')" class="govuk-link--no-visited-state" href="#">
+      Staff records
+    </a>
+  </app-summary-link>
+
+  <hr class="govuk-section-break--visible summary-section-break" />
+
+  <app-summary-link>
+    <a (click)="navigateToTab($event, 'training-and-qualifications')" class="govuk-link--no-visited-state" href="#">
+      Training and qualifications</a
+    >
+  </app-summary-link>
+</div>
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -6,7 +26,7 @@
         <div class="govuk-grid-column-one-half">
           <app-card [image]="'/assets/images/benchmarks.svg'">
             <a
-              (click)="navigateToBenchmarksTab($event)"
+              (click)="navigateToTab($event, 'benchmarks')"
               class="govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-font-weight-bold"
               href="#"
               >See how you compare with other workplaces</a
