--- a/src/app/features/new-dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/new-dashboard/home-tab/home-tab.component.html
@@ -1,25 +1,25 @@
 <app-new-dashboard-header tab="home"></app-new-dashboard-header>
-<div class="govuk-width-container govuk-!-margin-top-6 govuk-!-margin-bottom-2 summary-box" data-testid="summaryBox">
-  <app-summary-link>
+<div class="govuk-width-container govuk-!-margin-top-7 summary-box" data-testid="summaryBox">
+  <app-summary-section>
     <a (click)="navigateToTab($event, 'workplace')" class="govuk-link--no-visited-state" href="#"> Workplace </a>
-  </app-summary-link>
+  </app-summary-section>
 
-  <hr class="govuk-section-break--visible summary-section-break" />
-  <app-summary-link>
+  <hr class="govuk-section-break govuk-section-break--visible summary-section-break" />
+  <app-summary-section>
     <a (click)="navigateToTab($event, 'staff-records')" class="govuk-link--no-visited-state" href="#">
       Staff records
     </a>
-  </app-summary-link>
+  </app-summary-section>
 
-  <hr class="govuk-section-break--visible summary-section-break" />
+  <hr class="govuk-section-break govuk-section-break--visible summary-section-break" />
 
-  <app-summary-link>
+  <app-summary-section>
     <a (click)="navigateToTab($event, 'training-and-qualifications')" class="govuk-link--no-visited-state" href="#">
       Training and qualifications</a
     >
-  </app-summary-link>
+  </app-summary-section>
 </div>
-<div class="govuk-width-container">
+<div class="govuk-width-container govuk-!-margin-top-4">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-grid-row">
