feat(homePageSummaryBox): added padding to summary section

--- a/src/app/features/new-dashboard/home-tab/summary-section/summary-section.component.scss
+++ b/src/app/features/new-dashboard/home-tab/summary-section/summary-section.component.scss
@@ -1,6 +1,7 @@
 .summary-section {
   background-color: #f3f2f1;
   margin: 0px 0px 0 5px;
+  padding: 5px 0px;
 
   &__links {
     max-width: 42%;
